[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/MapScreen.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://Art/backgrounds/growth_combat.png" id="2_bg"]

[node name="MapScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ParallaxBG" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Layer1" type="TextureRect" parent="ParallaxBG"]
modulate = Color(0.4, 0.4, 0.4, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 6

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(640, 360)
limit_left = 0
limit_top = -2000
limit_right = 2500
limit_bottom = 2000
position_smoothing_enabled = true

[node name="MapContent" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TrailMapOverlay" type="ColorRect" parent="MapContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.9, 0.85, 0.7, 0.1)
mouse_filter = 2

[node name="PathsLayer" type="Control" parent="MapContent"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NodesLayer" type="Control" parent="MapContent"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HUDLayer" type="CanvasLayer" parent="."]

[node name="Header" type="HBoxContainer" parent="HUDLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
alignment = 1

[node name="BG" type="ColorRect" parent="HUDLayer/Header"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="InfoLabel" type="Label" parent="HUDLayer/Header"]
layout_mode = 2
text = "Map Info"

[node name="ConfirmPanel" type="PanelContainer" parent="HUDLayer"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -140.0
offset_right = 150.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="HUDLayer/ConfirmPanel"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="HUDLayer/ConfirmPanel/VBox"]
layout_mode = 2
text = "Travel to?"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="HUDLayer/ConfirmPanel/VBox"]
layout_mode = 2
alignment = 1

[node name="ConfirmBtn" type="Button" parent="HUDLayer/ConfirmPanel/VBox/HBox"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Travel"

[node name="CancelBtn" type="Button" parent="HUDLayer/ConfirmPanel/VBox/HBox"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Cancel"
